10.5: MDEV-34305 Redundant truncation errors/warnings with optimizer_trace enabled

Cherry-picking the patch from 10.5 to 11.6.

my_like_range*() can create longer keys than Field::char_length().
This caused warnings during print_range().

Fix:

Suppressing warnings in print_range().